--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AmandaMorley.com | Home</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="icon" href="favicon-32.png" type="image/x-icon" />
     <script src="js/homeAnimation.js"></script>
 </head>
 <body>
