--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AmandaMorley.com | Portfolio</title>
     <link title="AmandaMorleyStyles" rel="stylesheet" type="text/css" href="css/styles.css">
+    <link rel="icon" href="favicon-32.png" type="image/x-icon" />
     <script defer src="js/portfolioPage.js"></script>
 </head>
 <body class="portfolioPage">
