--- a/portfolio.html
+++ b/portfolio.html
@@ -167,7 +167,7 @@
                         <img src="images/gallery/thumbs/Portfolio/Remains_xsmall_thumb.jpg" alt="Remains Thumbnail">
                     </picture>
                 </div>
-                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Offering.jpg" data-image-name="Offering">
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Offering.jpg" data-image-name="The Offering">
                     <picture>
                         <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Offering_xsmall_thumb.jpg">
                         <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/Offering_medium_thumb.jpg">
@@ -461,7 +461,7 @@
                         <img src="images/gallery/thumbs/early/AntiqueLady_1_xsmall_thumb.jpg" alt="The Antique Lady Thumbnail">
                     </picture>
                 </div>
-                <div class="galleryImage" data-image-file="images/gallery/large/early/Mountain_1.jpg" data-image-name="Mountain">
+                <div class="galleryImage" data-image-file="images/gallery/large/early/Mountain_1.jpg" data-image-name="The Mountain">
                     <picture>
                         <source media="(max-width: 767px)" srcset="images/gallery/thumbs/early/Mountain_1_xsmall_thumb.jpg">
                         <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/early/Mountain_1_medium_thumb.jpg">
@@ -513,7 +513,7 @@
                         <img src="images/gallery/thumbs/early/Fable_xsmall_thumb.jpg" alt="Fable Thumbnail">
                     </picture>
                 </div>
-                <div class="galleryImage" data-image-file="images/gallery/large/early/Gryphon.jpg" data-image-name="Gryphon">
+                <div class="galleryImage" data-image-file="images/gallery/large/early/Gryphon.jpg" data-image-name="Plucked">
                     <picture>
                         <source media="(max-width: 767px)" srcset="images/gallery/thumbs/early/Gryphon_xsmall_thumb.jpg">
                         <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/early/Gryphon_medium_thumb.jpg">
@@ -552,7 +552,7 @@
                         <img src="images/gallery/thumbs/early/CatRace_xsmall_thumb.jpg" alt="Cat Race Thumbnail">
                     </picture>
                 </div>
-                <div class="galleryImage" data-image-file="images/gallery/large/early/Elephant_1.jpg" data-image-name="Elephant">
+                <div class="galleryImage" data-image-file="images/gallery/large/early/Elephant_1.jpg" data-image-name="The Elephant">
                     <picture>
                         <source media="(max-width: 767px)" srcset="images/gallery/thumbs/early/Elephant_1_xsmall_thumb.jpg">
                         <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/early/Elephant_1_medium_thumb.jpg">
@@ -591,7 +591,7 @@
                         <img src="images/gallery/thumbs/early/Piper_1_xsmall_thumb.jpg" alt="Piper Thumbnail">
                     </picture>
                 </div>
-                <div class="galleryImage" data-image-file="images/gallery/large/early/Squirrel_1.jpg" data-image-name="Squirrel">
+                <div class="galleryImage" data-image-file="images/gallery/large/early/Squirrel_1.jpg" data-image-name="The Pugilist">
                     <picture>
                         <source media="(max-width: 767px)" srcset="images/gallery/thumbs/early/Squirrel_1_xsmall_thumb.jpg">
                         <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/early/Squirrel_1_medium_thumb.jpg">
