--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                 <img src="images\about\ProfilePic.jpg" alt="">
             </div>
             <div id="bio">
-                <p>Hi! I’m a freelance illustrator and graduate of the Columbus College of Art and Design. For the past decade, I’ve happily illustrated the recurring segment “Ask Arizona” for Highlights magazine. In my personal work, I like to explore the subtle relationships between nature, philosophy, mythology, and the life cycle.</p>
+                <p>Hi! I’m a freelance illustrator and graduate of the Columbus College of Art and Design. For the past decade, I’ve happily illustrated the recurring segment “Ask Arizona” for <span style="font-weight: bold;">Highlights</span> magazine. In my personal work, I like to explore the subtle relationships between nature, philosophy, mythology, and the life cycle.</p>
 
                 <p>I live just outside of Columbus, Ohio with my husband, our two tiny humans, two geriatric cats, and a frisky puppy dog named Penny.</p>
             </div>
