--- a/portfolio.html
+++ b/portfolio.html
@@ -245,10 +245,75 @@
                         <img src="images/gallery/thumbs/Portfolio/Woman_xsmall_thumb.jpg" alt="Woman Thumbnail">
                     </picture>
                 </div>
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Mother.jpg" data-image-name="Mother">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Mother_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/Mother_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/Mother_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/Mother_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Mother_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Mother_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Mother_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Mother_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/Mother_xsmall_thumb.jpg" alt="Mother Thumbnail">
+                    </picture>
+                </div>
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Reprisal.jpg" data-image-name="Reprisal">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Reprisal_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/Reprisal_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/Reprisal_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/Reprisal_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Reprisal_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Reprisal_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Reprisal_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Reprisal_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/Reprisal_xsmall_thumb.jpg" alt="Reprisal Thumbnail">
+                    </picture>
+                </div>
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/ToJimWithLove.jpg" data-image-name="To Jim With Love">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/TJWL_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/TJWL_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/TJWL_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/TJWL_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TJWL_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TJWL_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TJWL_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TJWL_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/TJWL_xsmall_thumb.jpg" alt="To Jim With Love Thumbnail">
+                    </picture>
+                </div>
             </div>
         </div>
         <div class="gallery" id="published-gallery">
             <div class="galleryImages">
+                <div class="galleryImage" data-image-file="images\gallery\large\published\HFC_Cover1.jpg" data-image-name="Highlights Cover 1">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/published/HFC1_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/published/HFC1_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px)" srcset="images/gallery/thumbs/published/HFC1_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/published/HFC1_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/published/HFC1_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/published/HFC1_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/published/HFC1_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/published/HFC1_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/published/HFC1_xsmall_thumb.jpg" alt="Highlights Cover 1 Thumbnail">
+                    </picture>
+                </div>
+                <div class="galleryImage" data-image-file="images\gallery\large\published\HFC_Cover2.jpg" data-image-name="Highlights Cover 2">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/published/HFC2_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/published/HFC2_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px)" srcset="images/gallery/thumbs/published/HFC2_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/published/HFC2_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/published/HFC2_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/published/HFC2_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/published/HFC2_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/published/HFC2_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/published/HFC2_xsmall_thumb.jpg" alt="Highlights Cover 2 Thumbnail">
+                    </picture>
+                </div>
                 <div class="galleryImage" data-image-file="images/gallery/large/published/AZ_Gift-GivingLetdown.jpg" data-image-name="Gift-Giving Letdown">
                     <picture>
                         <source media="(max-width: 767px)" srcset="images/gallery/thumbs/published/AZ_Gift-GivingLetdown_xsmall_thumb.jpg">
@@ -260,19 +325,6 @@
                         <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/published/AZ_Gift-GivingLetdown_large_thumb_2x.jpg">
                         <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/published/AZ_Gift-GivingLetdown_xlarge_thumb_2x.jpg">
                         <img src="images/gallery/thumbs/published/AZ_Gift-GivingLetdown_xsmall_thumb.jpg" alt="Gift-Giving Letdown Thumbnail">
-                    </picture>
-                </div>
-                <div class="galleryImage" data-image-file="images/gallery/large/published/AZ_Friend_or_Foe2.jpg" data-image-name="Friend or Foe pt. 2">
-                    <picture>
-                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/published/AZ_Friend_or_Foe2_xsmall_thumb.jpg">
-                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/published/AZ_Friend_or_Foe2_medium_thumb.jpg">
-                        <source media="(min-width:1200px) and (max-width: 1499px)" srcset="images/gallery/thumbs/published/AZ_Friend_or_Foe2_large_thumb.jpg">
-                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/published/AZ_Friend_or_Foe2_xlarge_thumb.jpg">
-                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/published/AZ_Friend_or_Foe2_xlarge_thumb.jpg">
-                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/published/AZ_Friend_or_Foe2_medium_thumb_2x.jpg">
-                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/published/AZ_Friend_or_Foe2_large_thumb_2x.jpg">
-                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/published/AZ_Friend_or_Foe2_xlarge_thumb_2x.jpg">
-                        <img src="images/gallery/thumbs/published/AZ_Friend_or_Foe2_xsmall_thumb.jpg" alt="Friend or Foe pt. 2 Thumbnail">
                     </picture>
                 </div>
                 <div class="galleryImage" data-image-file="images/gallery/large/published/AZ_Friend_or_Foe1.jpg" data-image-name="Friend or Foe pt. 1">
