--- a/portfolio.html
+++ b/portfolio.html
@@ -14,11 +14,19 @@
             <div id="image-title">placeholder title</div>
             <div id="closebox"></div>
         </header>
-        <div id="image-display">
-            <div id="image-container">
-                <img id="image-image" draggable="true">
+            <div id="previewArea">
+                <div id="previousImage">
+                    <div class="hitbox" id="previousHitbox"></div>
+                </div>
+                <div id="image-display">
+            	    <div id="image-container">
+            	        <img id="image-image" draggable="true">
+            	    </div>
+                </div>
+                <div id="nextImage">
+                    <div class="hitbox" id="nextHitbox"></div>
+                </div>
             </div>
-        </div>
         <div class="image-instructions">scroll or pinch to zoom</div>
     </section>
     <nav>
