--- a/portfolio.html
+++ b/portfolio.html
@@ -15,16 +15,49 @@
             <div id="closebox"></div>
         </header>
             <div id="previewArea">
-                <div id="previousImage">
-                    <div class="hitbox" id="previousHitbox"></div>
+                <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                viewBox="0 0 316 250" style="enable-background:new 0 0 316 250;display:none;" xml:space="preserve">
+                    <symbol id="navArrow" viewBox="0 0 316 250">
+                        <g>
+                            <path d="M239.67,211.28c4.07-5.73,4.49-12.42,0.94-14.94c-3.55-2.52-9.72,0.09-13.79,5.82c-4.07,5.73-4.49,12.42-0.94,14.94
+                                C229.43,219.62,235.61,217.02,239.67,211.28z"/>
+                            <path d="M315.63,123.43c-5.22-10.26-50.84-18.03-67.74-29.82c-15.07-10.52-35.52-35.19-35.8-53.87
+                                c-0.57-38.97,39.18,0.07,44.55-2.29c1.33-0.59-16.08-51.89-44.83-33.44c-23.65,15.17-2.15,52.24-3.95,54.59
+                                C206.88,59.87,157.93,45.1,52,95.51C19.49,110.99-0.36,117.3,0.01,125c-0.37,7.7,19.48,14.01,52,29.49
+                                c105.92,50.4,154.87,35.64,155.85,36.91c1.8,2.35-19.7,39.42,3.95,54.59c28.75,18.45,46.16-32.85,44.83-33.44
+                                c-5.37-2.36-45.12,36.68-44.55-2.29c0.28-18.68,20.73-43.35,35.8-53.87c16.9-11.79,62.52-19.56,67.74-29.82
+                                c0.23-0.39,0.34-0.95,0.37-1.57C315.97,124.38,315.86,123.82,315.63,123.43z M207.09,174.05c-11,10.5-82.86-1.97-94.63-8.92
+                                c-11.98-7.08-18.49-26.06-18.49-36.83c0-1.03,0.07-2.13,0.22-3.3c-0.15-1.17-0.22-2.27-0.22-3.3c0-10.77,6.51-29.75,18.49-36.83
+                                c11.76-6.95,83.63-19.42,94.63-8.92c4.23,4.04,14.32,14.33,23.71,24.15c-3.31,8.9-4.25,10.74-17.46,17.35
+                                c-0.35,0.17-0.68,0.35-1,0.52c-5.12-1.7-9.87-3.18-14.32-4.44c-3.03-5.59-5.46-11.94,4-7.22c1.33,0.67,1.75-1.42,1.75-1.42
+                                c-5-11-15.74-8.24-16.74-2.58c-0.74,4.18-0.25,6.43,1.4,8.73c-7.04-1.64-13.42-2.65-19.56-3.09c-13.99-1-36.93,12.02-38.48,16
+                                c-0.18,0.46-0.22,1.6,0,2.1c1.68,3.93,24.49,17,38.48,16c6.14-0.44,12.52-1.45,19.56-3.09c-1.65,2.3-2.14,4.55-1.4,8.73
+                                c1,5.66,11.74,8.42,16.74-2.58c0,0-0.42-2.09-1.75-1.42c-9.46,4.72-7.03-1.63-4-7.22c4.46-1.26,9.21-2.74,14.32-4.44
+                                c0.32,0.17,0.65,0.35,1,0.52c13.21,6.61,14.15,8.45,17.46,17.35C221.41,159.72,211.31,170.01,207.09,174.05z M250.4,128.3
+                                c-0.56,1.16-5.57,6.71-12.06,13.64c-4.22-8.21-10.68-12.68-16.55-15.6c0.94-0.41,1.91-0.85,2.9-1.34c-0.99-0.49-1.96-0.93-2.9-1.34
+                                c5.88-2.92,12.33-7.39,16.55-15.6c6.5,6.93,11.51,12.48,12.06,13.64c0.61,1.25,1.22,2.29,1.51,3.3
+                                C251.62,126.01,251.01,127.05,250.4,128.3z"/>
+                            <path d="M239.67,37.72c4.07,5.73,4.49,12.42,0.94,14.94c-3.55,2.52-9.72-0.09-13.79-5.82c-4.07-5.73-4.49-12.42-0.94-14.94
+                                C229.43,29.38,235.61,31.98,239.67,37.72z"/>
+                        </g>
+                    </symbol>
+                </svg>
+                <div id="previousButtonArea">
+                    <svg id="previousButtonImage" class="hitbox">
+                        <use xlink:href="#navArrow" />
+                    </svg>
+                    <!-- <img class="hitbox" id="previousButtonImage" src="images/gallery/arrow.svg" alt="previous image button"> -->
                 </div>
                 <div id="image-display">
             	    <div id="image-container">
             	        <img id="image-image" draggable="true">
             	    </div>
                 </div>
-                <div id="nextImage">
-                    <div class="hitbox" id="nextHitbox"></div>
+                <div id="nextButtonArea">
+                    <svg id="nextButtonImage" class="hitbox">
+                        <use xlink:href="#navArrow" />
+                    </svg> 
+                    <!-- <img class="hitbox" id="nextButtonImage" src="images/gallery/arrow.svg" alt="next image button"> -->
                 </div>
             </div>
         <div class="image-instructions">scroll or pinch to zoom</div>
