--- a/portfolio.html
+++ b/portfolio.html
@@ -325,6 +325,19 @@
                         <img src="images/gallery/thumbs/Portfolio/TJWL_xsmall_thumb.jpg" alt="To Jim With Love Thumbnail">
                     </picture>
                 </div>
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Provenance.jpg" data-image-name="Provenance">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Provenance_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/Provenance_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/Provenance_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/Provenance_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Provenance_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Provenance_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Provenance_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Provenance_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/Provenance_xsmall_thumb.jpg" alt="Provenance Thumbnail">
+                    </picture>
+                </div>
             </div>
         </div>
         <div class="gallery" id="published-gallery">
