--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AmandaMorley.com | Portfolio</title>
+    <script src="js/mobileheight.js"></script>
     <link title="AmandaMorleyStyles" rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" href="favicon-32.png" type="image/x-icon" />
     <script defer src="js/portfolioPage.js"></script>
@@ -713,7 +714,7 @@
             </div>
         </div>
     </section>
-    <footer class="portfolioFooter"><div>&#169;2019 Amanda Morley</div></footer>
+    <footer class="portfolioFooter"><div>&#169;2020 Amanda Morley</div></footer>
 </body>
 </html>
 
