--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AmandaMorley.com | Home</title>
+    <script src="js/mobileheight.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" href="favicon-32.png" type="image/x-icon" />
     <script src="js/homeAnimation.js"></script>
@@ -177,23 +178,9 @@
                     (min-width: 1500px) and (min-resolution: 2ppx) 15.92vw"
             alt="">
     </div>
-    <footer><div>&#169;2019 Amanda Morley</div></footer>
+    <footer><div>&#169;2020 Amanda Morley</div></footer>
 </body>
 </html>
-<!--1920: 781x781  1562 xl
-    1366: 541x541  1082 l
-    1024: 405x405  810  m
-    768: 564x564   1128 s
-    675: 256x256   512  xsh
-    375: 439x439   878  xsv
-
-    1562 xl@2x 
-    1128 l@2x   & s@2x
-     878 m@2x   & xsv@2x
-     781 xl
-     564 xsh@2x & l       & s   
-     439 m      & xsv
-     256 xsh
 
 
 
