--- a/about.html
+++ b/about.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon-32.png" type="image/x-icon" />
-    <title>AmandaMorley.com | Home</title>\
+    <title>AmandaMorley.com | About</title>
     <script src="js/mobileheight.js"></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
-<body>
+<body class="aboutPage">
     <nav>
         <div id="HomeLink"><a href="index.html">AMANDA&#8226;MORLEY</a></div>
         <div id="PageLinks">
@@ -19,13 +19,17 @@
     <div id="about-mainContent" class="mainContent">
         <div id="about-content-container">
             <div id="email-link">Email: <a href="mailto:amandamorley@amandamorley.com">amandamorley@amandamorley.com</a></div>
-            <div id="profile-picture">
-                <img src="images\about\ProfilePic.jpg" alt="">
-            </div>
             <div id="bio">
-                <p>Hi! I’m a freelance illustrator and graduate of the Columbus College of Art and Design. For the past decade, I’ve happily illustrated the recurring segment “Ask Arizona” for <span style="font-weight: bold;">Highlights</span> magazine. In my personal work, I like to explore the subtle relationships between nature, philosophy, mythology, and the life cycle.</p>
-
-                <p>I live just outside of Columbus, Ohio with my husband, our two tiny humans, two geriatric cats, and a frisky puppy dog named Penny.</p>
+                <div id="bioContent">
+                    <div id="profile-picture">
+                        <img src="images\about\ProfilePic.jpg" alt="">
+                    </div>
+                    <div id="bioText">
+                        <p>Hello there! I’m a freelance illustrator and graduate of the Columbus College of Art and Design. For the past decade, I’ve happily illustrated the recurring segment “Ask Arizona” for <span style="font-weight: bold;">Highlights</span> magazine. In my personal work, I like to explore the subtle relationships between nature, philosophy, mythology, and the life cycle.</p>
+    
+                        <p>I live just outside of Columbus, Ohio with my husband, our two tiny humans, two geriatric cats, and a frisky puppy dog named Penny.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
