--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="favicon-32.png" type="image/x-icon" />
     <title>AmandaMorley.com | About</title>
-    <script src="js/mobileheight.js"></script>
+    <script src="js/mobileheight.js" defer></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body class="aboutPage">
