--- a/portfolio.html
+++ b/portfolio.html
@@ -7,7 +7,7 @@
     <script src="js/mobileheight.js" defer></script>
     <link title="AmandaMorleyStyles" rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" href="favicon-32.png" type="image/x-icon" />
-    <script defer src="js/portfolioPage.js" defer></script>
+    <script type="module" src="js/portfolioPage.js" defer></script>
 </head>
 <body class="portfolioPage">
     <section id="image-details">
