--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="favicon-32.png" type="image/x-icon" />
     <script src="js/homeAnimation.js" defer></script>
 </head>
-<body>
+<body class="homePage">
     <nav>
         <div id="HomeLink"><a href="index.html">AMANDA&#8226;MORLEY</a></div>
         <div id="PageLinks">
