--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AmandaMorley.com | Home</title>
+    <link rel="preload" href="fonts/ArimaMadurai-Regular.ttf" as="font">
     <script src="js/mobileheight.js" defer></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" href="favicon-32.png" type="image/x-icon" />
