--- a/portfolio.html
+++ b/portfolio.html
@@ -79,6 +79,19 @@
         <div class="instructions">Click images to enlarge.</div>
         <div class="gallery  showingGallery" id="new-gallery">
             <div class="galleryImages">
+                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Despoilment.jpg" data-image-name="Despoilment" data-append="Despoilment">
+                    <picture>
+                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/Despoilment_xsmall_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/Despoilment_medium_thumb.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/Despoilment_large_thumb.jpg">
+                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/Despoilment_xlarge_thumb.jpg">
+                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Despoilment_xlarge_thumb.jpg">
+                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Despoilment_medium_thumb_2x.jpg">
+                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Despoilment_large_thumb_2x.jpg">
+                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Despoilment_xlarge_thumb_2x.jpg">
+                        <img src="images/gallery/thumbs/Portfolio/Despoilment_xsmall_thumb.jpg" alt="Despoilment Thumbnail">
+                    </picture>
+                </div>
                 <div class="galleryImage" data-image-file="images/gallery/large/portfolio/De_rerum_natura.jpg" data-image-name="De rerum natura" data-append="De_rerum_natura">
                     <picture>
                         <source  srcset="images/gallery/thumbs/Portfolio/De_rerum_natura_xsmall_thumb.jpg" media="(max-width: 767px)">
@@ -311,19 +324,6 @@
                         <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Reprisal_large_thumb_2x.jpg">
                         <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/Reprisal_xlarge_thumb_2x.jpg">
                         <img src="images/gallery/thumbs/Portfolio/Reprisal_xsmall_thumb.jpg" alt="Reprisal Thumbnail">
-                    </picture>
-                </div>
-                <div class="galleryImage" data-image-file="images/gallery/large/portfolio/ToJimWithLove.jpg" data-image-name="To Jim With Love" data-append="To_Jim_With_Love">
-                    <picture>
-                        <source media="(max-width: 767px)" srcset="images/gallery/thumbs/Portfolio/TJWL_xsmall_thumb.jpg">
-                        <source media="(min-width: 768px) and (max-width:1199px)" srcset="images/gallery/thumbs/Portfolio/TJWL_medium_thumb.jpg">
-                        <source media="(min-width:1200px) and (max-width: 1499px)" srcset="images/gallery/thumbs/Portfolio/TJWL_large_thumb.jpg">
-                        <source media="(min-width: 1500px)" srcset="images/gallery/thumbs/Portfolio/TJWL_xlarge_thumb.jpg">
-                        <source media="(max-width: 767px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TJWL_xlarge_thumb.jpg">
-                        <source media="(min-width: 768px) and (max-width:1199px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TJWL_medium_thumb_2x.jpg">
-                        <source media="(min-width:1200px) and (max-width: 1499px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TJWL_large_thumb_2x.jpg">
-                        <source media="(min-width: 1500px) and (min-resolution: 2ppx)" srcset="images/gallery/thumbs/Portfolio/TJWL_xlarge_thumb_2x.jpg">
-                        <img src="images/gallery/thumbs/Portfolio/TJWL_xsmall_thumb.jpg" alt="To Jim With Love Thumbnail">
                     </picture>
                 </div>
                 <div class="galleryImage" data-image-file="images/gallery/large/portfolio/Provenance.jpg" data-image-name="Provenance" data-append="Provenance">
