Testing hostinger deployment
Added test comment

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="js/homeAnimation.js" defer></script>
 </head>
 <body class="homePage">
+    <!--This is a test of the web hook -->
     <nav>
         <div id="HomeLink"><a href="index.html">AMANDA&#8226;MORLEY</a></div>
         <div id="PageLinks">
