--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,15 @@
     <link title="AmandaMorleyStyles" rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" href="favicon-32.png" type="image/x-icon" />
     <script type="module" src="js/portfolioPage.js" defer></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WSYJ430RY6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-WSYJ430RY6');
+    </script>
 </head>
 <body class="portfolioPage">
     <section id="image-details">
