--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link rel="icon" href="favicon-32.png" type="image/x-icon" />
     <script src="js/homeAnimation.js" defer></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WSYJ430RY6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-WSYJ430RY6');
+    </script>
 </head>
 <body class="homePage">
     <nav>
