--- a/about.html
+++ b/about.html
@@ -7,6 +7,15 @@
     <title>AmandaMorley.com | About</title>
     <script src="js/mobileheight.js" defer></script>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+        <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-WSYJ430RY6"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-WSYJ430RY6');
+    </script>
 </head>
 <body class="aboutPage">
     <nav>
